# compilers

./: .gitignore
1lab/: assign.sh  charliterals.sh  comments.sh  compare.sh  decliterals.sh  floatliterals.sh  get_sources.sh  hexliterals.sh  identifiers.sh  intliterals.sh  keywords.sh  member.sh  octliterals.sh  preproc.sh  stringliterals.sh
1lab/new_version/: decliterals.sh  floatliterals.sh  identifiers.sh  intliterals.sh  octliterals.sh  stringliterals.sh  test.cpp
2lab/compilers-lab2-src/lexer/: CoolLexer.cpp  CoolLexer.flex  CoolLexer.h  Parser.h  driver  driver.cpp  prog.cl
3lab/compilers-lab3-src/calc/: calc  (+3 more)
4lab/compilers-lab4-src/: README  build.sh  cool.flex  list.h  parser-phase.cc  test.cl
5lab/compilers-lab5-src/: .gitignore  CMakeLists.txt  README  build.sh  clean.sh  cool-tree.cc  cool-tree.h  cool-tree.handcode.h  cool.flex  parser-phase.cc  test.sh  tree.h
5lab/compilers-lab5-src/examples/: prog.cl  sally.cl  test.cl  wrong_assign.cl  wrong_object.cl
5lab/compilers-lab5-src/semantic/: inheritance1.cl  inheritance2.cl
5lab/compilers-lab5-src/src/: cool-tree.cc  cool-tree.h  cool-tree.handcode.h  inheritance_graph.cc  inheritance_graph.h  list.h  parser-phase.cc  semant.cc  semant.h  stringtab.cc  stringtab.h  tree.h
fall-sem/1lab/: README
fall-sem/2lab/: README  lab2-tasks.txt
fall-sem/3lab/: README  a.out  aboba.ll  gcd.c  gcd.ll  optimized.ll
fall-sem/4lab/: README  README.md
fall-sem/5lab/: README  task.txt
fall-sem/6lab/: .gitignore  README
fall-sem/7lab/: README
spring-sem/1lab/: assign.sh  compare.sh  userliterals.sh
(+225 files in other folders)
